# 2048_bench

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: deploy-docs.yml  docs.yml
ai-2048/: Cargo.toml
ai-2048/benches/: boards.rs  datapack.rs
ai-2048/docs/: serialization-batch.md
ai-2048/src/: lib.rs  main.rs
ai-2048/src/engine/: mod.rs  ops.rs  state.rs
ai-2048/src/expectimax/: search_par.rs
ai-2048/src/serialization/: datapack.rs  dataset.rs  mod.rs  pack.rs
benches/: engine_ops.rs  expectimax_par.rs  expectimax_seq.rs  heuristic.rs
docs/: 2048-pack-errata.md  2048-pack.md  TODO.md  pack-migration-todos.md  packfile-proposal-claude.md  packfile-proposal-gpt.md  pyo3_proposal.claude.md  pyo3_proposal.md
examples/: example.a2run2
py-ai-2048/: Cargo.toml  README.md  main.py  pyproject.toml
py-ai-2048/src/: board.rs  datapack.rs  dataset.rs  expectimax.rs  lib.rs  move_enum.rs  pack.rs  serialization.rs
py-ai-2048/tests/: test_board.py  test_dataset.py  test_expectimax.py  test_pack_reader.py  test_run_io.py  test_step_batches.py
src/: engine.rs  expectimax.rs  lib.rs  main.rs  trace.rs  wasm.rs
src/engine/: mod.rs  ops.rs  state.rs  tables.rs
src/expectimax/: heuristic.rs  mod.rs  search_par.rs  search_seq.rs
src/serialization/: v2.rs
