[package]
name = "ai-2048"
version = "0.1.0"
authors = ["Matthew Kennedy <kennedymj97@gmail.com>"]
edition = "2021"

[lib]
# Build as a normal Rust library by default. If you need WASM bindings,
# enable the `wasm` feature (which brings in wasm-bindgen).
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable WebAssembly bindings and JS entropy. This pulls in `wasm-bindgen`
# and activates `getrandom/js` only when needed.
wasm = [
    "dep:wasm-bindgen",
    "getrandom/js",
]
# Bench-only helpers that expose a tiny surface for internal measurements
bench-internal = []

[dependencies]
rand = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
# Base RNG; JS entropy only when `wasm` feature is enabled
getrandom = { version = "0.2" }
rayon = "1"
dashmap = "5"
ahash = "0.8"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6.8"
bytemuck = "1.23.2"
memmap2 = "0.9.7"
thiserror = "2.0.16"
anyhow = "1.0.99"
owo-colors = "4.2.2"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.21.0"
