[workspace]
members = ["ai-2048", "py-ai-2048"]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
getrandom = { version = "0.2" }
rayon = "1"
dashmap = "5"
ahash = "0.8"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6.8"
bytemuck = "1.23.2"
memmap2 = "0.9.7"
thiserror = "2.0.16"
anyhow = "1.0.99"
owo-colors = "4.2.2"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
pyo3 = { version = "0.22", features = ["extension-module"] }